--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ html {
 
 body {
   font-family: "Roboto Serif", sans-serif;
-  background: #e3e3e3;
+  background: rgb(238, 228, 228);
+  line-height: 1.5;
 }
 
 .wrapper {
@@ -71,109 +72,200 @@ body {
   padding: 0px 15px;
 }
 
-.footer {
-}
-
-.header {
+[class*="__title"] {
+  font-size: 22px;
+  font-weight: 700;
+  padding-bottom: 25px;
 }
 
 .main {
   flex-grow: 1;
 }
 
-.header__container {
+.header__menu {
   background-color: rgba(52, 170, 238, 0.814);
   padding: 15px;
 }
-.header__menu {
-}
-.menu {
-}
+
 .menu__items {
   display: flex;
+  flex-wrap: wrap;
   column-gap: 20px;
   justify-content: flex-end;
+  font-size: 18px;
+  column-gap: 30px;
 }
+
 .menu__item {
+  transition: all 0.3s ease;
 }
-.page {
+
+.menu__item:hover {
+  text-decoration: underline;
+  color: rgb(126, 15, 15);
 }
-.page__container {
-}
+
 .page__columns {
   display: flex;
 }
+
 .page__column {
+  flex: 1 1 50%;
+  padding: 0 15px;
 }
+
+@media (max-width: 768px) {
+  .page__columns {
+    flex-wrap: wrap;
+  }
+  .page__column {
+    flex: 0 1 100%;
+  }
+}
+
+.page__column_color-one {
+  background-color: rgba(52, 170, 238, 0.514);
+}
+
+.page__column_color-two {
+  background-color: white;
+}
+
 .page__about {
+  padding: 20px 15px;
 }
-.about {
-}
+
 .about__title {
+  font-size: 26px;
 }
+
+.about__image img {
+  width: 100%;
+}
+
 .about__image {
+  border-radius: 20px;
+  margin: 0 0 40px 0;
+  object-fit: cover;
 }
-.about__items {
+
+.about__item:hover {
+  text-decoration: underline;
+  color: rgb(126, 15, 15);
 }
-.about__item {
+
+.about__item-loc:not(:last-child) {
+  margin-bottom: 20px;
 }
+
+.about__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 .summary {
+  padding: 20px 15px;
 }
-.summary__title {
-}
+
 .summary__text {
+  line-height: 1.5;
 }
+
 .language {
+  padding: 20px 15px;
 }
-.language__title {
+
+.language__item:not(:last-child) {
+  margin-bottom: 15px;
 }
-.language__items {
-}
-.language__item {
-}
+
 .education {
+  padding: 30px 15px;
 }
-.education__title {
-}
-.education__items {
-}
+
 .education__item {
+  padding-left: 20px;
+}
+
+.education__item::before {
+  content: "\2022";
+  margin-left: -20px;
+  padding-right: 10px;
+}
+
+.education__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 .skills {
+  padding: 30px 15px;
 }
-.skills__title {
-}
-.skills__items {
-}
+
 .skills__item {
+  padding-left: 20px;
 }
+
+.skills__item::before {
+  content: "\2022";
+  margin-left: -20px;
+  padding-right: 10px;
+}
+
+.skills__item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
 .code {
+  padding: 30px 15px;
 }
-.code__title {
-}
+
 .code_text {
+  font-size: 14px;
+  margin-bottom: 20px;
 }
+
+.code_split {
+  background-color: rgba(52, 170, 238, 0.514);
+  height: 80px;
+  border-radius: 10px;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
+code {
+  margin: 0;
+  padding: 0;
+}
+
 .experience {
+  padding: 20px 15px;
 }
-.experience__title {
-}
+
 .experience__link {
+  transition: all 0.3s ease;
 }
-.footer {
+
+.experience__link:hover {
+  text-decoration: underline;
+  color: rgb(126, 15, 15);
 }
-.footer__container {
-  background-color: rgba(52, 170, 238, 0.814);
-  padding: 15px;
-}
+
 .footer__items {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: black;
+  background-color: rgba(52, 170, 238, 0.814);
+  padding: 15px;
 }
-.footer__item {
-}
+
 .footer__link {
+  transition: all 0.2s ease;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
+  color: rgb(126, 15, 15);
+  font-size: 18px;
 }
 .footer__image {
   width: 100%;
